crates/eure-macros/tests/compile_fail/into_eure_variant_flatten_ext_not_supported.rs
use eure::IntoEure;

#[derive(IntoEure)]
enum Test {
    Struct {
        #[eure(flatten_ext)]
        field: String,
    },
}

fn main() {}
